--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.0.0",
     "jade": "~1.6.0",
     "winston": "~0.8.1",
-    "nconf": "~0.6.9"
+    "nconf": "~0.6.9",
+    "mongoose": "~3.8.18"
   }
 }
