--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "jade": "~1.6.0",
     "winston": "~0.8.1",
     "nconf": "~0.6.9",
-    "mongoose": "~3.8.18"
+    "mongoose": "~3.8.18",
+    "oauth2orize": "~1.0.1",
+    "passport": "~0.2.1",
+    "passport-http": "~0.2.2",
+    "passport-http-bearer": "~1.0.1",
+    "passport-oauth2-client-password": "~0.1.2"
   }
 }
