--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "passport-http": "~0.2.2",
     "passport-http-bearer": "~1.0.1",
     "passport-oauth2-client-password": "~0.1.2"
+  },
+  "devDependencies": {
+    "jasmine": "~2.0.1"
   }
 }
