--- a/package.json
+++ b/package.json
@@ -23,6 +23,14 @@
     "passport-oauth2-client-password": "~0.1.2"
   },
   "devDependencies": {
-    "jasmine": "~2.0.1"
+    "jasmine": "~2.0.1",
+    "gulp": "~3.8.10",
+    "gulp-browserify": "^0.5.0",
+    "gulp-clean": "^0.3.1",
+    "gulp-jade": "^0.9.0",
+    "gulp-plumber": "^0.6.6",
+    "gulp-stylus": "^1.3.3",
+    "gulp-uglify": "^1.0.1",
+    "gulp-watch": "^1.1.0"
   }
 }
