--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular": "1.3.*",
     "angular-route": "*",
     "angular-mocks": "*",
-    "bootstrap-material-design": "~0.1.4"
+    "bootstrap-material-design": "~0.1.4",
+    "angular-google-maps": "~2.0.9"
   },
   "ignore": [
     "**/.*",
