--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "around-me",
   "version": "0.0.0",
   "private": true,
+  "main": "server.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node server.js"
+  },
+  "engines": {
+    "node": "0.10.x"
   },
   "dependencies": {
     "express": "~4.9.0",
