--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
     "passport": "~0.2.1",
     "passport-http": "~0.2.2",
     "passport-http-bearer": "~1.0.1",
-    "passport-oauth2-client-password": "~0.1.2"
-  },
-  "devDependencies": {
+    "passport-oauth2-client-password": "~0.1.2",
     "jasmine": "~2.0.1",
     "gulp": "~3.8.10",
     "gulp-browserify": "^0.5.0",
