--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "postinstall": "node node_modules/.bin/gulp build"
+    "postinstall": "gulp build"
   },
   "engines": {
     "node": "0.10.x"
