--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "postinstall": "gulp build"
+    "start": "node server.js"
   },
   "engines": {
     "node": "0.10.x"
@@ -25,7 +24,9 @@
     "passport": "~0.2.1",
     "passport-http": "~0.2.2",
     "passport-http-bearer": "~1.0.1",
-    "passport-oauth2-client-password": "~0.1.2",
+    "passport-oauth2-client-password": "~0.1.2"
+  },
+  "devDependencies": {
     "jasmine": "~2.0.1",
     "gulp": "~3.8.10",
     "gulp-browserify": "^0.5.0",
