--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "gulp-plumber": "^0.6.6",
     "gulp-stylus": "^1.3.3",
     "gulp-uglify": "^1.0.1",
-    "gulp-watch": "^1.1.0"
+    "gulp-watch": "^1.1.0",
+    "gulp-useref": "~1.0.2",
+    "gulp-ref-hash": "0.0.2"
   }
 }
