--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "gulp-uglify": "^1.0.1",
     "gulp-watch": "^1.1.0",
     "gulp-useref": "~1.0.2",
-    "gulp-ref-hash": "0.0.2"
+    "gulp-ref-hash": "0.0.2",
+    "gulp-if": "~1.2.5",
+    "gulp-cssmin": "~0.1.6"
   }
 }
