--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "passport": "~0.2.1",
     "passport-http": "~0.2.2",
     "passport-http-bearer": "~1.0.1",
-    "passport-oauth2-client-password": "~0.1.2"
+    "passport-oauth2-client-password": "~0.1.2",
+    "compression": "~1.2.2"
   },
   "devDependencies": {
     "jasmine": "~2.0.1",
@@ -37,7 +38,6 @@
     "gulp-uglify": "^1.0.1",
     "gulp-watch": "^1.1.0",
     "gulp-useref": "~1.0.2",
-    "gulp-ref-hash": "0.0.2",
     "gulp-if": "~1.2.5",
     "gulp-cssmin": "~0.1.6"
   }
