--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gulp-watch": "^1.1.0",
     "gulp-useref": "~1.0.2",
     "gulp-if": "~1.2.5",
-    "gulp-cssmin": "~0.1.6"
+    "gulp-cssmin": "~0.1.6",
+    "gulp-uncss": "~0.5.1"
   }
 }
