--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "gulp-useref": "~1.0.2",
     "gulp-if": "~1.2.5",
     "gulp-cssmin": "~0.1.6",
-    "gulp-uncss": "~0.5.1"
+    "gulp-uncss": "~0.5.1",
+    "yargs": "~1.3.3",
+    "browserify-shim": "~3.8.2",
+    "browserify": "~8.0.2"
   }
 }
