--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gulp-uncss": "~0.5.1",
     "yargs": "~1.3.3",
     "browserify-shim": "~3.8.2",
-    "browserify": "~8.0.2"
+    "browserify": "~8.0.2",
+    "vinyl-transform": "~1.0.0"
   }
 }
