--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     }
   },
   "browserify": {
-    "transform": ["browserify-shim"]
+    "transform": [
+      "browserify-shim"
+    ]
   },
   "dependencies": {
     "express": "~4.9.0",
@@ -60,6 +62,7 @@
     "yargs": "~1.3.3",
     "browserify-shim": "~3.8.2",
     "browserify": "~8.0.2",
-    "vinyl-transform": "~1.0.0"
+    "vinyl-transform": "~1.0.0",
+    "gulp-jshint": "~1.9.0"
   }
 }
