--- a/package.json
+++ b/package.json
@@ -58,11 +58,12 @@
     "gulp-jade": "^0.9.0",
     "gulp-plumber": "^0.6.6",
     "gulp-stylus": "^1.3.3",
-    "gulp-uglify": "^1.0.1",
+    "gulp-uglify": "~1.0.2",
     "yargs": "~1.3.3",
     "browserify-shim": "~3.8.2",
     "browserify": "~8.0.2",
     "vinyl-transform": "~1.0.0",
-    "gulp-jshint": "~1.9.0"
+    "gulp-jshint": "~1.9.0",
+    "gulp-if": "~1.2.5"
   }
 }
