--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "browserify": "~8.0.2",
     "vinyl-transform": "~1.0.0",
     "gulp-jshint": "~1.9.0",
-    "gulp-if": "~1.2.5"
+    "gulp-if": "~1.2.5",
+    "gulp-cssmin": "~0.1.6"
   }
 }
