--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "preinstall": "npm run vendor && npm run build",
-    "build": "gulp build --prod",
-    "vendor": "bower i"
+    "build": "./node_modules/gulp/bin/gulp build --prod",
+    "vendor": "./node_modules/bower/bin/bower i"
   },
   "engines": {
     "node": "0.10.x"
@@ -66,6 +66,7 @@
     "vinyl-transform": "~1.0.0",
     "gulp-jshint": "~1.9.0",
     "gulp-if": "~1.2.5",
-    "gulp-cssmin": "~0.1.6"
+    "gulp-cssmin": "~0.1.6",
+    "bower": "~1.3.12"
   }
 }
