--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "postinstall": "npm run vendor && npm run build",
-    "build": "./node_modules/gulp/bin/gulp build --prod",
+    "build": "./node_modules/gulp/bin/gulp.js build --prod",
     "vendor": "./node_modules/bower/bin/bower i"
   },
   "engines": {
