--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "postinstall": "npm run vendor && npm run build",
+    "postinstall": "npm run vendor && npm run build && node fake/data.js",
     "build": "./node_modules/gulp/bin/gulp.js build --prod",
     "vendor": "./node_modules/bower/bin/bower i"
   },
