--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "postinstall": "npm run vendor && npm run build && node fake/data.js",
+    "postinstall": "npm run vendor && npm run build",
     "build": "./node_modules/gulp/bin/gulp.js build --prod",
     "vendor": "./node_modules/bower/bin/bower i"
   },
@@ -37,36 +37,37 @@
     ]
   },
   "dependencies": {
-    "express": "~4.9.0",
     "body-parser": "~1.8.1",
-    "cookie-parser": "~1.3.3",
-    "morgan": "~1.3.0",
-    "serve-favicon": "~2.1.3",
-    "debug": "~2.0.0",
-    "jade": "~1.6.0",
-    "winston": "~0.8.1",
-    "nconf": "~0.6.9",
-    "mongoose": "~3.8.18",
-    "oauth2orize": "~1.0.1",
-    "passport": "~0.2.1",
-    "passport-http": "~0.2.2",
-    "passport-http-bearer": "~1.0.1",
-    "passport-oauth2-client-password": "~0.1.2",
+    "bower": "~1.3.12",
+    "browserify": "~8.0.2",
+    "browserify-shim": "~3.8.2",
+    "chai": "^1.10.0",
     "compression": "~1.2.2",
-    "jasmine": "~2.0.1",
+    "cookie-parser": "~1.3.3",
+    "debug": "~2.0.0",
+    "express": "~4.9.0",
     "gulp": "~3.8.10",
     "gulp-clean": "^0.3.1",
+    "gulp-cssmin": "~0.1.6",
+    "gulp-if": "~1.2.5",
     "gulp-jade": "^0.9.0",
+    "gulp-jshint": "~1.9.0",
     "gulp-plumber": "^0.6.6",
     "gulp-stylus": "^1.3.3",
     "gulp-uglify": "~1.0.2",
-    "yargs": "~1.3.3",
-    "browserify-shim": "~3.8.2",
-    "browserify": "~8.0.2",
+    "jade": "~1.6.0",
+    "jasmine": "~2.0.1",
+    "morgan": "~1.3.0",
+    "nconf": "~0.6.9",
+    "passport": "~0.2.1",
+    "passport-http": "~0.2.2",
+    "passport-http-bearer": "~1.0.1",
+    "pg": "~4.2.0",
+    "pg-hstore": "~2.3.1",
+    "sequelize": "^2.0.0-rc8",
+    "serve-favicon": "~2.1.3",
     "vinyl-transform": "~1.0.0",
-    "gulp-jshint": "~1.9.0",
-    "gulp-if": "~1.2.5",
-    "gulp-cssmin": "~0.1.6",
-    "bower": "~1.3.12"
+    "winston": "~0.8.1",
+    "yargs": "~1.3.3"
   }
 }
