--- a/bower.json
+++ b/bower.json
@@ -8,12 +8,8 @@
   "main": "bin/www.js",
   "license": "MIT",
   "dependencies": {
-    "angular": "1.3.*",
-    "angular-route": "*",
-    "angular-mocks": "*",
-    "angular-google-maps": "~2.0.9",
-    "materialize": "~0.95.0"
+    "jquery": "~2.1.3",
+    "materialize": "~0.95.1"
   },
-  "ignore": [
-  ]
+  "ignore": []
 }
