--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "start": "node server.js",
     "postinstall": "npm run vendor && npm run build",
     "build": "./node_modules/gulp/bin/gulp.js build --prod",
-    "vendor": "./node_modules/bower/bin/bower i"
+    "vendor": "./node_modules/bower/bin/bower i",
+    "test": "node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha test/*"
   },
   "engines": {
-    "node": "0.10.x"
+    "node": "0.12.x"
   },
   "browser": {
     "jquery": "./client/src/vendor/jquery/dist/jquery.js",
@@ -30,7 +31,6 @@
     "bower": "~1.3.12",
     "browserify": "~8.0.2",
     "browserify-shim": "~3.8.2",
-    "chai": "^1.10.0",
     "compression": "~1.2.2",
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
@@ -53,10 +53,17 @@
     "passport-http-bearer": "~1.0.1",
     "pg": "~4.2.0",
     "pg-hstore": "~2.3.1",
-    "sequelize": "^2.0.0-rc8",
+    "sequelize": "^2.0.2",
     "serve-favicon": "~2.1.3",
     "vinyl-transform": "~1.0.0",
     "winston": "~0.8.1",
     "yargs": "~1.3.3"
+  },
+  "devDependencies": {
+    "chai": "~1.10.0",
+    "codeclimate-test-reporter": "0.0.4",
+    "istanbul": "^0.3.5",
+    "mocha": "^2.1.0",
+    "supertest": "^0.15.0"
   }
 }
