--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
   "license": "MIT",
   "dependencies": {
     "jquery": "~2.1.3",
-    "materialize": "~0.95.1"
+    "materialize": "~0.95.1",
+    "react": "~0.12.2"
   },
   "ignore": []
 }
