--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
   },
   "browser": {
     "jquery": "./client/src/vendor/jquery/dist/jquery.js",
-    "materialize": "./client/src/vendor/materialize/dist/js/materialize.js"
+    "materialize": "./client/src/vendor/materialize/dist/js/materialize.js",
+    "react": "./client/src/vendor/react/react.js"
   },
   "browserify-shim": {
     "jquery": "jquery",
-    "materialize": "materialize"
+    "materialize": "materialize",
+    "react": "react"
   },
   "browserify": {
     "transform": [
-      "browserify-shim"
+      "browserify-shim",
+      "reactify"
     ]
   },
   "dependencies": {
@@ -53,6 +56,7 @@
     "passport-http-bearer": "~1.0.1",
     "pg": "~4.2.0",
     "pg-hstore": "~2.3.1",
+    "reactify": "^1.0.0",
     "sequelize": "^2.0.2",
     "serve-favicon": "~2.1.3",
     "vinyl-transform": "~1.0.0",
