--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "jade": "~1.6.0",
     "jasmine": "~2.0.1",
     "morgan": "~1.3.0",
+    "multer": "^0.1.8",
     "passport": "~0.2.1",
     "passport-http": "~0.2.2",
     "passport-http-bearer": "~1.0.1",
