--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "morgan": "~1.3.0",
     "multer": "^0.1.8",
     "passport": "~0.2.1",
+    "passport-facebook": "^1.0.3",
     "passport-http": "~0.2.2",
     "passport-http-bearer": "~1.0.1",
     "pg": "~4.2.0",
