--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "postinstall": "npm run vendor && npm run build",
     "build": "./node_modules/gulp/bin/gulp.js build --prod",
     "vendor": "./node_modules/bower/bin/bower i",
-    "test": "node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha test/*"
+    "test": "node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha test/*",
+    "rundb": "./rundb.sh"
   },
   "engines": {
     "node": "0.12.x"
