--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "postinstall": "npm run vendor && npm run build",
-    "build": "./node_modules/gulp/bin/gulp.js build --prod",
+    "build": "./node_modules/gulp/bin/gulp.js build",
     "vendor": "./node_modules/bower/bin/bower i",
     "test": "node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha test/*",
     "rundb": "./rundb.sh"
